# folio

./: .gitignore  README.md  install.sh  pyproject.toml
docs/: console-architecture.md  design-principles.md  example.folio  renderer-interface.md  user-manual.md
docs/sample/: design-principles.md
docs/sample/contacts/: maya.raman.vcf  omar.rizvi.vcf  sara.chen.vcf
docs/sample/email/.Drafts/cur/: 1775819176.M563152P164603Q1.vijay-LPMH510-N:2,D
docs/sample/email/cur/: 1712400000.1_0.local:2,S  1712403600.2_0.local:2,S
src/folio/: __init__.py  main.py
src/folio/core/: contact_reader.py  email_store.py  events.py  models.py  mutations.py  parser.py  registry.py  sh_runner.py  store.py  web_reader.py
src/folio/python/: worker.py
src/folio/renderers/: base.py  contact.py  email.py  file.py  note.py  py.py  sh.py  table.py  task.py  web.py
src/folio/renderers/manifests/: contact.toml  email.toml  file.toml  note.toml  py.toml  sh-output.toml  sh.toml  table.toml  task.toml  web.toml
src/folio/ui/: app.py  document_view.py
tests/: conftest.py  test_app.py  test_contact_reader.py  test_email_store.py  test_parser.py  test_registry.py  test_sh_runner.py  test_store.py  test_web_reader.py  test_worker.py
