[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folio-console"
version = "0.1.0"
description = "Minimal Textual scaffold for the Folio console renderer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.58.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
folio = "folio.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"folio.renderers" = ["manifests/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
